# Bob

./: .gitignore  .gitmodules  BUILD.gn  README.md  setup.bat  test.bat
toolchain/: BUILD.gn  BUILDCONFIG.gn  bob_projects.gni
toolchain/clang_frontend/: Frontend.cpp  clang_frontend.sln  clang_frontend.vcxproj
toolchain/clang_frontend/clang/tools/driver/: cc1_main.cpp  driver.cpp
toolchain/clang_frontend/llvm/include/llvm/Support/: CommandLine.h
toolchain/clang_frontend/llvm/lib/Support/: CommandLine.cpp  TypeSize.cpp
toolchain/python/: action_build_hlsl.py  action_build_resources.py  get_files.py  library_gn.py  library_project_setup.py  library_sln.py  library_util.py  setup_generate_solution.py  setup_regenerate_solution.py  setup_thirdparty.py  task_build_assimp.py  task_build_cmake.py  task_build_copy.py  task_build_detours.py  task_build_download.py  task_build_ffmpeg.py  task_build_gn.py  task_build_iced_x86.py  task_build_idasdk.py  task_build_llvm.py  task_build_mimalloc.py  task_build_msys2.py  task_build_ninja.py  task_build_pefile.py  task_build_pip_toml.py  task_build_winpix3.py  task_build_yasm.py  task_build_zlib.py  task_manager.py
