extra_include_dirs = [ 
  ".",
  "//" ]

template("bob_library")
{
  if(!defined(invoker.include_dirs)) {
    invoker.include_dirs = extra_include_dirs
  } else {
    invoker.include_dirs += extra_include_dirs
  }

  if(!defined(invoker.defines)) {
    invoker.defines = tag_configuration_defines
  } else {
    invoker.defines += tag_configuration_defines
  }
  
  target(bob_library_type, target_name)
  {
    metadata = {}
    forward_variables_from(invoker, "*")
  }
}

template("bob_static_library")
{
  if(!defined(invoker.include_dirs)) {
    invoker.include_dirs = extra_include_dirs
  } else {
    invoker.include_dirs += extra_include_dirs
  }

  if(!defined(invoker.defines)) {
    invoker.defines = tag_configuration_defines
  } else {
    invoker.defines += tag_configuration_defines
  }
  
  static_library(target_name)
  {
    metadata = {}
    forward_variables_from(invoker, "*")
  }
}

template("bob_shared_library")
{
  if(!defined(invoker.include_dirs)) {
    invoker.include_dirs = extra_include_dirs
  } else {
    invoker.include_dirs += extra_include_dirs
  }

  if(!defined(invoker.defines)) {
    invoker.defines = tag_configuration_defines
  } else {
    invoker.defines += tag_configuration_defines
  }
  
  shared_library(target_name)
  {
    metadata = {}
    forward_variables_from(invoker, "*")
  }
}

template("bob_executable")
{
  if(!defined(invoker.include_dirs)) {
    invoker.include_dirs = extra_include_dirs
  } else {
    invoker.include_dirs += extra_include_dirs
  }

  if(!defined(invoker.defines)) {
    invoker.defines = tag_configuration_defines
  } else {
    invoker.defines += tag_configuration_defines
  }
  
  executable(target_name)
  {
    metadata = {}
    forward_variables_from(invoker, "*")
  }
}

template("bob_source_set")
{
  if(!defined(invoker.include_dirs)) {
    invoker.include_dirs = extra_include_dirs
  } else {
    invoker.include_dirs += extra_include_dirs
  }
  
  source_set(target_name)
  {
    metadata = {}
    forward_variables_from(invoker, "*")
  }
}

template("bob_python")
{
  if(!defined(invoker.include_dirs)) {
    invoker.include_dirs = extra_include_dirs
  } else {
    invoker.include_dirs += extra_include_dirs
  }
  
  source_set(target_name)
  {
    metadata = {}
    forward_variables_from(invoker, "*")
    metadata.custom_target_type = [ "python_library" ]
  }
}

template("bob_resources") {
  action(target_name) {
    forward_variables_from(invoker, [ "data_deps", "deps", "public_deps", "visibility", "metadata", "sources", "inputs", "outputs", "args" ])
    if (!defined(inputs)) { inputs = [] }
    if (!defined(args)) { args = [] }
    if (!defined(outputs)) { outputs = [] }

    script = "//toolchain/python/action_build_resources.py"

    # The script imports this Python file so we want to rebuild if it changes.
    inputs += [ ]
    
    # BCS Environment
    args += [
      "--bob_root_dir", rebase_path(bob_root_dir),
      "--bob_third_party_dir", rebase_path(bob_third_party_dir),
      "--bob_7z_dir", rebase_path(bob_7z_dir),
      "--bob_ewdk_dir", rebase_path(bob_ewdk_dir),
      "--bob_download_cache_dir", rebase_path(bob_download_cache_dir),
      "--target_os", target_os,
      "--target_config", target_config,
      "--target_link_config", target_link_config,
      "--target_cpu", target_cpu,
      "--target_src_dir", rebase_path("."),
      "--target_gen_dir", rebase_path(target_gen_dir),
      "--target_out_dir", rebase_path(target_out_dir),
      "--root_out_dir", rebase_path(root_out_dir),
      "--root_gen_dir", rebase_path(root_gen_dir),
      "--root_build_dir", rebase_path(root_build_dir) ]

    # Note that we have to manually pass the sources to our script if the
    # script needs them as inputs.
    args += [ "--outputs" ] +  rebase_path(outputs)
    args += [ "--inputs" ] + rebase_path(sources)
    args += [ "--sources" ] + sources
  }
}

template("bob_hlsl") {
  action(target_name) {
    forward_variables_from(invoker, [ "data_deps", "deps", "public_deps", "visibility", "metadata", "sources", "inputs", "outputs", "args" ])
    if (!defined(inputs)) { inputs = [] }
    if (!defined(args)) { args = [] }
    if (!defined(outputs)) { outputs = [] }

    script = "//toolchain/python/action_build_hlsl.py"

    # The script imports this Python file so we want to rebuild if it changes.
    inputs += [ ]
    
    # BCS Environment
    args += [
      "--bob_root_dir", rebase_path(bob_root_dir),
      "--bob_third_party_dir", rebase_path(bob_third_party_dir),
      "--bob_7z_dir", rebase_path(bob_7z_dir),
      "--bob_ewdk_dir", rebase_path(bob_ewdk_dir),
      "--bob_download_cache_dir", rebase_path(bob_download_cache_dir),
      "--target_os", target_os,
      "--target_config", target_config,
      "--target_link_config", target_link_config,
      "--target_cpu", target_cpu,
      "--target_src_dir", rebase_path("."),
      "--target_gen_dir", rebase_path(target_gen_dir),
      "--target_out_dir", rebase_path(target_out_dir),
      "--root_out_dir", rebase_path(root_out_dir),
      "--root_gen_dir", rebase_path(root_gen_dir),
      "--root_build_dir", rebase_path(root_build_dir) ]

    # Note that we have to manually pass the sources to our script if the
    # script needs them as inputs.
    args += [ "--outputs" ] +  rebase_path(outputs)
    args += [ "--inputs" ] + rebase_path(sources)
    args += [ "--sources" ] + sources
  }
}
